# hdx-scraper-buildings

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.yaml  hatch.toml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run.py
.github/workflows/: build.yml
src/hdx/scraper/buildings/: __init__.py  __main__.py  config.py  dataset.py  download.py  group.py  pipeline.py
src/hdx/scraper/buildings/common/: admin0.py  config.py  download.py  extract.py  group.py  split.py
src/hdx/scraper/buildings/config/: hdx_dataset_google.yaml  hdx_dataset_microsoft.yaml
src/hdx/scraper/buildings/google/: __main__.py  countries.csv
src/hdx/scraper/buildings/microsoft/: __main__.py  countries.csv
src/hdx/scraper/ml_buildings/microsoft/: __main__ copy.py  __main__.py  __main__copy 2.py  config.py  iso3_to_region_name.csv  split.py  utils.py
src/hdx/scraper/ml_buildings/microsoft/multi/: __main__.py  iterate.py
tests/: conftest.py  test_pipeline.py
