[project]
name = "hdx-scraper-buildings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb",
    "geopandas",
    "httpx[http2]",
    "pandas[performance]",
    "pyarrow",
    "tqdm",
]

[dependency-groups]
dev = ["ruff", "taskipy"]

[tool.taskipy.tasks]
google = "python -m src.hdx.scraper.buildings.google"
microsoft = "python -m src.hdx.scraper.buildings.microsoft"
export = "uv sync -q && uv export -q -o requirements.txt --no-dev --no-hashes"
ruff = "ruff format && ruff check && ruff format"
