#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-buildings"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "duckdb",
    "geopandas",
    "hdx-python-api",
    "hdx-python-utilities",
    "httpx",
    "pandas[performance]",
    "pyarrow",
    "python-dotenv",
    "quantulum3[classifier]",
    "tenacity",
    "tqdm",
]

[dependency-groups]
dev = ["pre-commit", "pytest-cov", "pytest", "ruff", "taskipy"]

[tool.taskipy.tasks]
app = "python -m src.hdx.scraper.buildings"
google = "python -m src.hdx.scraper.buildings.google"
microsoft = "python -m src.hdx.scraper.buildings.microsoft"
export = "uv sync -q && uv export -o requirements.txt -q --no-dev --no-emit-project --no-hashes && uv export -o requirements-dev.txt -q --no-emit-project --no-hashes"
ruff = "ruff format && ruff check && ruff format"
